RESOLVED FIXED141419
[GTK] Layout Test editing/deleting/delete-emoji.html is failing
https://bugs.webkit.org/show_bug.cgi?id=141419
Summary [GTK] Layout Test editing/deleting/delete-emoji.html is failing
Marcos Chavarría Teijeiro (irc: chavaone)
Reported 2015-02-10 02:07:30 PST
The following layout test is failing on GTK+ since it was added on r179567 (http://trac.webkit.org/r179567) The diff can be found here https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20%28Tests%29/r179867%20%286096%29/editing/deleting/delete-emoji-pretty-diff.html The delete emoji operation doesn't seem to be working.
Attachments
Patch (3.14 KB, patch)
2015-03-10 02:54 PDT, Marcos Chavarría Teijeiro (irc: chavaone)
no flags
Marcos Chavarría Teijeiro (irc: chavaone)
Comment 1 2015-03-10 02:54:49 PDT
Marcos Chavarría Teijeiro (irc: chavaone)
Comment 2 2015-03-10 03:04:25 PDT
The code for deleting special characters like emoji was specific for EFL and COCOA plarforms, there was a #if preprocessor directive like the following: #if PLATFORM(COCOA) || PLATFORM(EFL) I added PLATFORM(GTK) to the previous directive and now the emoji deletion is working on GTK+ I don't know if it has some side effects but I have run the Layout tests and they seem to work properly.
WebKit Commit Bot
Comment 3 2015-03-30 05:41:48 PDT
Comment on attachment 248322 [details] Patch Clearing flags on attachment: 248322 Committed r182137: <http://trac.webkit.org/changeset/182137>
WebKit Commit Bot
Comment 4 2015-03-30 05:41:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.