Source/WebCore: Add support for deleting emoji on GTK https://bugs.webkit.org/show_bug.cgi?id=141419

Patch by Marcos Chavarría Teijeiro <chavarria1991@gmail.com> on 2015-03-30
Reviewed by Gustavo Noronha Silva.

The code for deleting special group of characters was specific for
COCOA and EFL platforms. The fix consists on add GTK to the #if
preprocessor directive.

* rendering/RenderText.cpp:
(WebCore::RenderText::previousOffsetForBackwardDeletion):

LayoutTests:
Update expectations for delete-emoji test since the bug is fixed now.
https://bugs.webkit.org/show_bug.cgi?id=141419

Patch by Marcos Chavarría Teijeiro <chavarria1991@gmail.com> on 2015-03-30
Reviewed by Gustavo Noronha Silva.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/161237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182137 268f45cc-cd09-0410-ab3c-d52691b4dbfc